# probable-guacamole

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: draft_new_release.yml  merge_dev.yml  publish-new-release.yml
db/.lancedb/Boston.lance/_transactions/: 0-0e7a115a-43b9-4623-9ec7-03dba07f9ccf.txn  1-84ee55d5-0236-4a8c-9763-408693bcf321.txn
db/.lancedb/Boston.lance/data/: dab7d6af-481f-4edd-8abb-474a5334735a.lance
db/.lancedb/Cars.lance/_transactions/: 0-867c1d5e-9629-407d-9e53-509630474eb1.txn  1-3ef20219-feeb-4324-849e-5cdebd8ac437.txn
db/.lancedb/Cars.lance/data/: b90642b0-d3f3-476c-84c0-874bb1c3b3de.lance
db/.lancedb/college.lance/_transactions/: 0-94d86423-19ca-488d-a59c-d941d5bdec95.txn  1-bf203598-eeff-461c-909c-d3d5cbd3cad1.txn
db/.lancedb/college.lance/data/: 0763b125-7a6f-4bb3-9ee7-1fc68da809a6.lance
examples/ch_2/: basics.ipynb  exercises.ipynb
src/probable_guacamole/: first_module.py
tests/: test_unit.py
